--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,33 +1,157 @@
-.App {
+@import url('https://fonts.googleapis.com/css?family=Russo+One&display=swap');
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
+*:focus {
+  outline: none;
+}
+.flex {
+  display: flex;
+}
+.flex-center-main {
+  justify-content: center;
+}
+
+.flex-center-cross {
+  align-items: center;
+}
+.flex-space-around {
+  justify-content: space-around;
+}
+.flex-space-between {
+  justify-content: space-between;
+}
+.flex-space-evenly {
+  justify-content: space-evenly;
+}
+.flex-end {
+  justify-content: flex-end;
+}
+.flex-align-center {
+  align-items: center;
+}
+
+/**********************
+**********************
+        SIDEBAR STYLES
+**********************
+**********************/
+.sidebar {
+  background: #2b4054;
+  flex-basis: 20%;
+  padding: 0.1em;
+  height: 100vh;
+  color: #f8f8f8;
+}
+.logo {
+  width: 3em;
+  height: 3em;
+  border-radius: 100%;
+  margin: 0em 1em;
+}
+
+.logo-name {
+  font-family: 'Russo One';
+  color: #fff;
+}
+
+.Admin {
+  width: 5em;
+  height: 5em;
+  border-radius: 100%;
+  margin: 0em 1em;
+}
+.admin-logo {
+  margin-top: 3em;
+  margin-bottom: 2em;
+}
+.admin-logo p {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 500;
+}
+.overview {
+  text-transform: uppercase;
+  cursor: pointer;
+}
+details > summary::-webkit-details-marker {
+  display: none;
+}
+.left-nav {
+  align-items: baseline;
+  padding: 1em;
+}
+.left-nav:hover {
+  background: #33485c;
+}
+
+details {
   text-align: center;
+  flex-basis: 80%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+details > p {
+  text-align: left;
+  padding: 0.5em;
+}
+details > p:hover {
+  background: #2b4054;
+}
+/**********************
+**********************
+        DETAIL STYLES
+**********************
+**********************/
+.detailbar {
+  background: #f8f8f8;
+  flex-basis: 80%;
+  height: 100vh;
+}
+header {
+  background: #eeeeee;
+}
+header nav {
+  padding-right: 1em;
+}
+header nav div {
+  padding: 1em;
+}
+header nav img {
+  width: 2em;
+  height: 2em;
+  border-radius: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.chart div {
+  flex-basis: 45%;
+}
+[class='.chart .flex-center-main'] {
+  flex-basis: 90%;
+}
+rect {
+  fill: transparent;
+}
+.summary {
+  background: #f7f7f7;
+}
+.summary-item {
+  margin-top: 1em;
+  margin-bottom: 1em;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.summary-item p {
+  font-size: x-small;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.summary-item * {
+  margin: 0;
+  color: #2b4054;
+}
+.border {
+  border-right: #2b4054 1px solid;
+}
+.h1 {
+  display: block;
+  font-size: 2em;
+  font-weight: bold;
 }
