--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Russo+One&display=swap');
+/* @import url('https://fonts.googleapis.com/css?family=Russo+One&display=swap'); */
 * {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -40,7 +40,7 @@
   background: #2b4054;
   flex-basis: 20%;
   padding: 0.1em;
-  height: 100vh;
+  height: auto;
   color: #f8f8f8;
 }
 .logo {
@@ -49,7 +49,9 @@
   border-radius: 100%;
   margin: 0em 1em;
 }
-
+.logo-link {
+  text-decoration: none;
+}
 .logo-name {
   font-family: 'Russo One';
   color: #fff;
@@ -96,6 +98,7 @@ details > p {
 details > p:hover {
   background: #2b4054;
 }
+
 /**********************
 **********************
         DETAIL STYLES
@@ -104,10 +107,20 @@ details > p:hover {
 .detailbar {
   background: #f8f8f8;
   flex-basis: 80%;
-  height: 100vh;
+  height: auto;
 }
 header {
   background: #eeeeee;
+  position: sticky;
+  top: 0;
+}
+header a {
+  text-decoration-line: none;
+  color: #2b4054;
+}
+header a:hover {
+  text-decoration-line: none;
+  color: #2b4054;
 }
 header nav {
   padding-right: 1em;
@@ -154,4 +167,36 @@ rect {
   display: block;
   font-size: 2em;
   font-weight: bold;
+}
+.table-title {
+  background: #9cbcc6;
+  width: 80%;
+  margin: auto;
+}
+.table-item {
+  width: 80%;
+  margin: auto;
+}
+.table-wrapper div > p {
+  flex-basis: 20%;
+}
+.table-wrapper a {
+  text-decoration: none;
+  color: #33485c;
+}
+.hover:hover {
+  background: #9cbcc6;
+  color: #f7f7f7;
+}
+
+/**********************
+**********************
+        DETAIL STYLES
+**********************
+**********************/
+.trip-page {
+  padding: 2em;
+}
+.trip-page h1 {
+  text-align: center;
 }
